Fixed z-index issue with auth overlay

--- a/www/cdn/css/main.css
+++ b/www/cdn/css/main.css
@@ -313,6 +313,7 @@ body {
     opacity: 1;
     visibility: visible;
     transition: all 0.5s linear;
+    z-index: 2;
 }
 
 .auth-box {
